add all Strings in project

--- a/app/src/main/res/layout/fragment_hotels.xml
+++ b/app/src/main/res/layout/fragment_hotels.xml
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="19dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Отель"
+                    android:text="@string/hotel"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,8 @@
                         android:padding="4dp"
                         android:src="@drawable/icon_star"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/card_carousel" />
+                        app:layout_constraintTop_toBottomOf="@id/card_carousel"
+                        tools:ignore="ContentDescription" />
 
                     <TextView
                         android:id="@+id/rating"
@@ -131,7 +132,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/roboto"
-                    android:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет"
+                    tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет"
                     android:textColor="@color/text_blue"
                     android:textSize="14sp"
                     app:layout_constraintTop_toBottomOf="@id/text_name" />
@@ -177,7 +178,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     android:fontFamily="@font/roboto_medium"
-                    android:text="Об отеле"
+                    android:text="@string/about_hotel"
                     android:textColor="@color/black"
                     android:textSize="22sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -232,7 +233,8 @@
                             android:src="@drawable/ic_emoji"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/text_facilities"
@@ -240,7 +242,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Удобства"
+                            android:text="@string/enemies"
                             android:textColor="@color/black"
                             android:textSize="16sp"
                             app:layout_constraintStart_toEndOf="@id/ic_emoji"
@@ -252,7 +254,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Самое необходимое"
+                            android:text="@string/most_famous"
                             android:textColor="@color/text_grey"
                             android:textSize="16sp"
                             app:layout_constraintStart_toEndOf="@id/ic_emoji"
@@ -264,7 +266,8 @@
                             android:src="@drawable/ic_next"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -280,10 +283,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_line"
-
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/text_included"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
                         <ImageView
                             android:id="@+id/ic_check"
@@ -292,7 +295,8 @@
                             android:src="@drawable/ic_check"
                             app:layout_constraintBottom_toBottomOf="@id/text_included_neded"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="@+id/text_included" />
+                            app:layout_constraintTop_toTopOf="@+id/text_included"
+                            tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/text_included"
@@ -301,7 +305,7 @@
                             android:layout_marginStart="12dp"
                             android:layout_marginTop="10dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Что включено"
+                            android:text="@string/what_inclusive"
                             android:textColor="@color/black"
                             android:textSize="16sp"
                             app:layout_constraintStart_toEndOf="@id/ic_check"
@@ -313,9 +317,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Самое необходимое"
                             android:textColor="@color/text_grey"
                             android:textSize="16sp"
+                            android:text="@string/most_famous"
                             app:layout_constraintStart_toEndOf="@id/ic_check"
                             app:layout_constraintTop_toBottomOf="@id/text_included" />
 
@@ -325,7 +329,8 @@
                             android:src="@drawable/ic_next"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
                         <ImageView
                             android:id="@+id/bottom_line"
@@ -337,7 +342,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="@id/text_included"
-                            app:layout_constraintTop_toBottomOf="@id/text_included_neded" />
+                            app:layout_constraintTop_toBottomOf="@id/text_included_neded"
+                            tools:ignore="ContentDescription" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -353,7 +359,8 @@
                             android:src="@drawable/ic_close"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
                         <TextView
                             android:id="@+id/text_notIncluded"
@@ -361,7 +368,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Что не включено"
+                            android:text="@string/what_not_inclusive"
                             android:textColor="@color/black"
                             android:textSize="16sp"
                             app:layout_constraintStart_toEndOf="@id/ic_close"
@@ -373,7 +380,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:fontFamily="@font/roboto"
-                            android:text="Самое необходимое"
+                            android:text="@string/most_famous"
                             android:textColor="@color/text_grey"
                             android:textSize="16sp"
                             app:layout_constraintStart_toEndOf="@id/ic_close"
@@ -385,7 +392,8 @@
                             android:src="@drawable/ic_next"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:ignore="ContentDescription" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -413,7 +421,7 @@
         android:id="@+id/button_toRooms"
         android:layout_width="match_parent"
         android:layout_marginStart="16dp"
-        android:text="К выбору номера"
+        android:text="@string/to_choose_room"
         android:textColor="@color/white"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="21dp"
