--- a/app/src/main/res/layout/fragment_complete.xml
+++ b/app/src/main/res/layout/fragment_complete.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/roboto_medium"
-            android:text="Бронирование"
+            android:text="@string/reserve"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -32,7 +32,8 @@
             android:layout_gravity="center|start"
             android:layout_marginStart="16dp"
             android:padding="16dp"
-            android:src="@drawable/button_back" />
+            android:src="@drawable/button_back"
+            tools:ignore="ContentDescription" />
 
     </FrameLayout>
 
@@ -45,7 +46,8 @@
         android:src="@drawable/ic_super"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/textView3"
@@ -53,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="Ваш заказ принят в работу"
+        android:text="@string/order_complete"
         android:textAlignment="center"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -94,7 +96,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="21dp"
             android:background="@drawable/button_blue_corners"
-            android:text="Супер!"
+            android:text="@string/nice"
             android:textColor="@color/white" />
 
     </androidx.cardview.widget.CardView>
