--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -7,45 +7,57 @@
     android:background="@color/main_bg"
     tools:context=".ui.fragments.RoomFragment">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frameLayout"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:textColor="@color/black"
             android:id="@+id/text_main_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:fontFamily="@font/roboto_medium"
-            android:text="Steigenberger Makadi"
-            android:textSize="18sp" />
+            tools:text="Steigenberger Makadi"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_marginEnd="12dp"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button_back"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/button_back"
             android:layout_width="48dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="8dp"
             android:layout_height="48dp"
             android:layout_gravity="center|start"
-            android:layout_marginStart="16dp"
             android:padding="16dp"
-            android:src="@drawable/button_back" />
+            android:src="@drawable/button_back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="8dp"
         android:id="@+id/recycler_rooms"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/room_item_layout"
+        android:layout_marginTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="188dp"
+        tools:listitem="@layout/room_item_layout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
