--- a/app/src/main/res/layout/tourist_item_layout.xml
+++ b/app/src/main/res/layout/tourist_item_layout.xml
@@ -30,7 +30,8 @@
         android:src="@drawable/button_open"
         app:layout_constraintBottom_toBottomOf="@+id/text_touristNumber"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_touristNumber" />
+        app:layout_constraintTop_toTopOf="@+id/text_touristNumber"
+        tools:ignore="ContentDescription" />
 
 
     <LinearLayout
@@ -52,7 +53,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Имя"
+            android:hint="@string/hint_name"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -73,7 +74,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Фамилия"
+            android:hint="@string/hint_second_name"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -94,7 +95,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Дата рождения"
+            android:hint="@string/hint_date"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -115,7 +116,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Гражданство"
+            android:hint="@string/hint_country"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -136,7 +137,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Номер загран паспорта"
+            android:hint="@string/hint_pass_num"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
@@ -157,7 +158,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:hint="Срок действия загранпаспорта"
+            android:hint="@string/hint_pass_date"
             android:textColorHint="@color/text_grey"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
